--- a/_posts/2025-02-04-jwt-token.md
+++ b/_posts/2025-02-04-jwt-token.md
@@ -61,7 +61,7 @@ API 문서를 보다가
 
 1. 기본 셋팅값의 "alg" (algorithm) 부분을 "none" 으로 해놓고 서버에 보내는 악성 유저가 있답니다, 간혹 서버들은 none을 가지고 있는 허가증을 허가 해주어서 이런다고 하네요 
 2. 디코딩이 매우 쉽습니다, 그래서 민감한 정보를 절대 넣으면 안된답니다, 최소한의 정보를 유지해야 한다고 하네요.
-3. 시크릿키 문제도 잇습니다, 개발자 마음대로 시그니처에 시크릿키를 짧게, 유추하게 쉽게 (brute force attack으로) 뚫린답니다.
+3. 시크릿키 문제도 잇습니다, 개발자 마음대로 시그니처에 시크릿키를 짧게, 유추하게 쉽게 (brute force attack으로)써버리는 경우가 많아 쉽게 뚫린답니다.
 4. JWT 탈취도 있는 문제입니다, JWT는 서버에서 도난당한걸 알아도 허가증 취소 같은걸 못해서 (세션은 가능) 막을 방법이 없습니다. 유효기간 지날때까지 기다ㄹㅕ..
 
 물론 예방을 잘 해놓으면 어느정도 보완이 됩니다
