--- a/_posts/2025-03-22-hanghae99-wk0.md
+++ b/_posts/2025-03-22-hanghae99-wk0.md
@@ -8,7 +8,7 @@ author: <author_id>
 
 # 시작하는 마음
 
-1. 지금까지의 회고
+## 지금까지의 회고
 
 대학 입학때까지 코딩을 안해본 상태에서 무작정 수학을 남들보다 조금 잘한다는 이유로, 컴공을 선택했고, 영국으로 학사를 하러가 맨땅에 헤딩을 하며 코딩과제 0점도 맞고 100점도 맞으며,
 다사다난하게 졸업을 했습니다. 감사하게도 24년도 8월에 한국에 놀러왔다가 일을 할 수있는 기회를 잡았습니다만, 너무 부족한 실력과, gpt가 사수겸 선생님이였던 저한테는 1인분을 할 수있는 수준까지는 많은 시간과 노력이 필요했습니다.
@@ -18,19 +18,19 @@ author: <author_id>
 그래서 원래 예정이였던 호주로 석사를 하러 취직한지 2개월만에 떠났습니다. 감사하게도 대표님은 멘토가 되어주시겠다며, 배우면서 일을 도와줄 수있는 환경을 만들어주셨고, 본가인 말레이시아에 가서도, 지금 호주 시드니에 와서도,
 도움이 되어주시고 계십니다. 부트캠프 마저 끊어주셨습니다
 
-2. 항해 플러스 참여 계기
+## 항해 플러스 참여 계기
 
 한참 부족한 실력을 쌓고, 사수의 존재가 있는 부트캠프라기에, 처음부터 시작하는것 처럼 (심지어 제대로 된 코딩공부도 처음 맞아요) 하려고 참여했습니다
 
-3. 향후 5년 뒤 커리어 방향성
+## 향후 5년 뒤 커리어 방향성
 
 저는 개발도 하고 디자인도 할 수있는 다재다능한 PM이 되고 싶습니다. 2년후 졸업을 하고 인턴/취직을 하면서 바로 PM이 될 수는 없겠지만, 관련된 업무 스킬, 경험을 쌓으며, 3년차가 되었을때 호주의 탑급 PM이 되는것이 목표입니다. 
 
-4. 10주간의 목표
+## 10주간의 목표
 
 Gpt없이, 순수 구글링, 물어보기로 10주를 클리어 하는것이 목표입니다.
 석사를 하기에, 공부량이 엄청 나서 과연 모든 과제를 클리어 할 수있을지는 모르겠지만, 80% 이상을 목표로 하고있습니다.
 
-5. 최종 목표 배지
+## 최종 목표 배지
 
 레드 배지
